Fix minimal border spacing in editor

--- a/assets/blocks/course-outline/style.editor.scss
+++ b/assets/blocks/course-outline/style.editor.scss
@@ -31,6 +31,8 @@ $dark-gray: #1a1d20;
 	.wp-block-sensei-lms-course-outline-module {
 		&.is-style-minimal {
 			.wp-block-sensei-lms-course-outline-module__name {
+				margin: 0 4px;
+				padding: 1rem calc(1rem - 4px);
 				border-bottom: 4px solid $dark-gray;
 			}
 		}
